  - Improved the localization for the influence tooltip for when a nation is trying to influence
  - Fixed the missing localization for the Cuban focus "Talks with Colombia"
  - Improved the grammar and structure for some Serbian events
  - Fixed the localization for the Indian events about communist rebellions not properly referencing India

 Map:

 Performance:

 User Interface:

v1.12.1b

 AI:
  - AI is less likely to continue to combat influence if their highest influence has a very positive opinion (+100)
  - Improved some of the AI handling of the buying and selling of reactor grade fuel

 Balance:
  - Rebalanced the purchase of reactor grade fuel from 500 units to 2500 so you buy a larger amount of fuel so you do not need to do it as much
  - Reduced the time to deliver for International Markets to 45 days from 60 days

 Bugfix:
  - Fixed the US Event "United States Offer SHORAD Projects" not properly giving influence to the right nation
  - Fixed the Algerian character "Fatima Zohra Ardjoune" not properly showing up in the GUI
  - Fixed the country flag decisions this time for real (they broke just a few days ago)
  - Fixed the USA decision "Moving in on Africa" not properly checking for China
  - Fixed the Iranian Majles being able to object to law changes despite them being abolished
  - Fixed the Russian destroyer variant Talwar Class having a module that was available in 2015
  - Fixed two influence triggers for the Belarusian Union State mechanic displaying the wrong name
  - Fixed an influence trigger in the Belarusian Union State mechanic where it states 70% influence but in reality was looking for 80%
  - Fixed Dutch decisions not being visible after taking the "Economic Revitalization of the Dutch Caribbean" focus
  - Fixed Dutch country leader switching when House of Orange is in power and King/Queen is abdicating
  - Fixed Dutch events and decisions giving building to random states instead of random owned states