@@ -13172,7 +13172,7 @@ focus_tree = {
 			if = {
 				limit = {
 					NOT = {
-					has_country_flag = SOV_wagner_parties
+						has_country_flag = SOV_wagner_parties
 					}
 				}
 				set_temp_variable = { party_index = 22 }
