@@ -1375,7 +1375,7 @@ calculate_additional_income_rate = {
 			add_to_variable = { additional_income_rate = additional_income_SWE_Social_insurance }
 		}
 		if = {
-			limit = { 
+			limit = {
 				has_country_flag = SWE_idea_tourist_industry_1
 				NOT = {
 					has_war = yes
@@ -1386,7 +1386,7 @@ calculate_additional_income_rate = {
 			add_to_variable = { additional_income_rate = additional_income_SWE_tourism_1 }
 		}
 		if = {
-			limit = { 
+			limit = {
 				has_country_flag = SWE_idea_tourist_industry_2
 				NOT = {
 					has_war = yes
@@ -1397,7 +1397,7 @@ calculate_additional_income_rate = {
 			add_to_variable = { additional_income_rate = additional_income_SWE_tourism_2 }
 		}
 		if = {
-			limit = { 
+			limit = {
 				has_country_flag = SWE_idea_tourist_industry_3
 				NOT = {
 					has_war = yes
@@ -1408,7 +1408,7 @@ calculate_additional_income_rate = {
 			add_to_variable = { additional_income_rate = additional_income_SWE_tourism_3 }
 		}
 		if = {
-			limit = { 
+			limit = {
 				has_country_flag = SWE_idea_tourist_industry_4
 				NOT = {
 					has_war = yes
