@@ -933,8 +933,8 @@
  SOV_kpss_constitution_1_tt: "$SOV_revived_politburo_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+10.0%§!\n\n"
  SOV_kpss_constitution_2_tt: "$SOV_revived_politburo_tt_intro$\n$communism_drift$: §G+0.07§!\n\n"
  SOV_first_two_year_plan_tt: "$SOV_revived_politburo_tt_intro$\n$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: §G+5.00%§!\n\n"
- SOV_reestablish_the_military_industrial_complex_tt: "$SOV_revived_politburo_tt_intro$\n$MODIFIER_production_speed_arms_factory_factor$: §G+7.00%§!\n\n"
- SOV_factory_merges_tt: "$SOV_revived_politburo_tt_intro$\n$MODIFIER_production_speed_arms_factory_factor$: §G+5.00%§!\n\n"
+ SOV_reestablish_the_military_industrial_complex_tt: "$SOV_revived_politburo_tt_intro$\n$modifier_production_speed_arms_factory_factor$: §G+7.00%§!\n\n"
+ SOV_factory_merges_tt: "$SOV_revived_politburo_tt_intro$\n$modifier_production_speed_arms_factory_factor$: §G+5.00%§!\n\n"
  SOV_military_councils_tt: "$SOV_revived_politburo_tt_intro$\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §G-2.00%§!\n$military_industry_tax_modifier$: §G+5.00%§!\n\n"
  SOV_empower_nkvd_tt: "$SOV_revived_politburo_tt_intro$\n$OPERATIVE_SLOT$: §G+1§!\n\n"
  SOV_revitalize_air_bases_tt: "$SOV_revived_politburo_tt_intro$\n$MODIFIER_AIR_ACCIDENTS_FACTOR$: §G-10.00%§!\n\n"
@@ -949,10 +949,10 @@
  SOV_npp_modifier_tt_intro: "Modify §Y$SOV_npp_modifier$§! by"
  SOV_npp_healthcare_tt: "$SOV_npp_modifier_tt_intro$\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §G+3.00%§!\n$health_cost_multiplier_modifier$: §R+5.00%§!\n\n"
  SOV_npp_education_tt: "$SOV_npp_modifier_tt_intro$\n$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+7.00%§!\n$education_cost_multiplier_modifier$: §R+4.00%§!\n\n"
- SOV_npp_infrastructure_tt: "$SOV_npp_modifier_tt_intro$\n$MODIFIER_production_speed_infrastructure_factor$: §G+5.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+2.00%§!\n\n"
+ SOV_npp_infrastructure_tt: "$SOV_npp_modifier_tt_intro$\n$modifier_production_speed_infrastructure_factor$: §G+5.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+2.00%§!\n\n"
  SOV_npp_digital_economy_tt: "$SOV_npp_modifier_tt_intro$\n$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+3.00%§!\n$modifier_production_speed_offices_factor$: §G+5.00%§!\n$education_cost_multiplier_modifier$: §R+3.00%§!\n\n"
- SOV_npp_industry_tt: "$SOV_npp_modifier_tt_intro$\n$MODIFIER_production_speed_arms_factory_factor$: §G+5.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+3.00%§!\n\n"
- SOV_npp_again_tt: "$SOV_npp_modifier_tt_intro$\n$MODIFIER_production_speed_arms_factory_factor$: §G+5.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+3.00%§!$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+3.00%§!\n$modifier_production_speed_offices_factor$: §G+5.00%§!\n$education_cost_multiplier_modifier$: §R+3.00%§!\n$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+7.00%§!\n$education_cost_multiplier_modifier$: §R+4.00%§!$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §G+3.00%§!\n$health_cost_multiplier_modifier$: §R+5.00%§!\n\n"
+ SOV_npp_industry_tt: "$SOV_npp_modifier_tt_intro$\n$modifier_production_speed_arms_factory_factor$: §G+5.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+3.00%§!\n\n"
+ SOV_npp_again_tt: "$SOV_npp_modifier_tt_intro$\n$modifier_production_speed_arms_factory_factor$: §G+5.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+3.00%§!$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+3.00%§!\n$modifier_production_speed_offices_factor$: §G+5.00%§!\n$education_cost_multiplier_modifier$: §R+3.00%§!\n$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+7.00%§!\n$education_cost_multiplier_modifier$: §R+4.00%§!$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §G+3.00%§!\n$health_cost_multiplier_modifier$: §R+5.00%§!\n\n"
  ###500 Days Dynamic Modifier
  SOV_500_days_modifier: "Economic Growth from 500 Days Programm"
  SOV_500_days_modifier_tt_intro: "Modify §Y$SOV_500_days_modifier$§! by"
@@ -979,7 +979,7 @@
  SOV_just_inner13_tt: "$SOV_just_inner_modifier_tt_intro$\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+4%§!\n$police_cost_multiplier_modifier$: §R+9.00%§!\n\n"
  SOV_just_inner14_tt: "$SOV_just_inner_modifier_tt_intro$\n$MODIFIER_STABILITY_FACTOR$: §R-3.00%§!\n\n"
  SOV_just_inner15_tt: "$SOV_just_inner_modifier_tt_intro$\n$MODIFIER_STABILITY_FACTOR$: §G+2.00%§!\n$MODIFIER_WAR_SUPPORT_FACTOR$: §G+4§!\n\n"
- SOV_just_inner16_tt: "$SOV_just_inner_modifier_tt_intro$\n$MODIFIER_production_speed_arms_factory_factor$: §G+10.00%§!\n\n"
+ SOV_just_inner16_tt: "$SOV_just_inner_modifier_tt_intro$\n$modifier_production_speed_arms_factory_factor$: §G+10.00%§!\n\n"
  SOV_just_inner17_tt: "$SOV_just_inner_modifier_tt_intro$\n$communism_drift$: §G+0.03§!\n\n"
  SOV_just_inner18_tt: "$SOV_just_inner_modifier_tt_intro$\n$democratic_drift$: §G+0.01§!\n\n"
  SOV_just_inner19_tt: "$SOV_just_inner_modifier_tt_intro$\n$MODIFIER_STABILITY_FACTOR$: §G+1.00%§!\n$MODIFIER_WAR_SUPPORT_FACTOR$: §G+2.00%§!\n\n"
@@ -995,7 +995,7 @@
  SOV_nazbol_inner_start_tt: "Add §Y$SOV_nazbol_inner_modifier$§!, which grants:\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+10.00%§!\n$nationalist_drift$: §G+0.02%§!\n\n"
  SOV_nazbol_inner1_tt: "$SOV_nazbol_inner_modifier_tt_intro$\n$personnel_cost_multiplier_modifier$: §R+9.00%§!\n$tax_gain_multiplier_modifier$: §R-5.00%§!\n$MODIFIER_RECRUITABLE_POPULATION$: §G+12.00%§!\n\n"
  SOV_nazbol_inner2_tt: "$SOV_nazbol_inner_modifier_tt_intro$\n$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+12.00%§!\n\n"
- SOV_nazbol_inner3_tt: "$SOV_nazbol_inner_modifier_tt_intro$ \n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §R-6.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+12.00%§! \n$MODIFIER_production_speed_arms_factory_factor$: §G+5.00%§!\n\n"
+ SOV_nazbol_inner3_tt: "$SOV_nazbol_inner_modifier_tt_intro$ \n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §R-6.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+12.00%§! \n$modifier_production_speed_arms_factory_factor$: §G+5.00%§!\n\n"
  SOV_nazbol_inner4_tt: "$SOV_nazbol_inner_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §R-25.00%§!\n\n"
  SOV_nazbol_inner5_tt: "$SOV_nazbol_inner_modifier_tt_intro$\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §G+9.00%§!\n\n"
  SOV_nazbol_inner6_tt: "$SOV_nazbol_inner_modifier_tt_intro$\n$tax_gain_multiplier_modifier$: §G+9.00%§!\n\n"
@@ -1013,7 +1013,7 @@
  SOV_navalny_inner6_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$tax_gain_multiplier_modifier$: §G+10.00%§!\n$MODIFIER_PRODUCTION_FACTORY_EFFICIENCY_GAIN_FACTOR$: §G+10.00%§!\n\n"
  SOV_navalny_inner7_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$democratic_drift$: §G+0.05§!\n\n"
  SOV_navalny_inner9_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$bureaucracy_cost_multiplier_modifier$: §R+10.00%§!\n\n"
- SOV_navalny_inner10_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$bureaucracy_cost_multiplier_modifier$: §R+12.00%§!\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §R-6.00%§!\n$MODIFIER_production_speed_arms_factory_factor$: §G+5.00%§!\n\n"
+ SOV_navalny_inner10_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$bureaucracy_cost_multiplier_modifier$: §R+12.00%§!\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §R-6.00%§!\n$modifier_production_speed_arms_factory_factor$: §G+5.00%§!\n\n"
  SOV_navalny_inner11_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §R-15.00%§!\n\n"
  SOV_navalny_inner12_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$population_tax_income_multiplier_modifier$: §G+10.00%§!\n$tax_rate_change_multiplier_modifier$: §G-10.00%§!\n$econ_cycle_upg_cost_multiplier_modifier$: §G-10.00%§!\n$MODIFIER_STABILITY_FACTOR$: §R-9.00%§!\n\n"
  SOV_navalny_inner13_tt: "$SOV_navalny_inner_modifier_tt_intro$\n$democratic_drift$: §R-0.01§!\n$MODIFIER_war_support_modifier$: §G+3.00%§!\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+2.00%§!\n\n"
