@@ -2,7 +2,7 @@
  flat_productivity_change_effect_TT: "§YProductivity§!: [?temp_productivity_change|3+]\n"
 
  debt_temp_display_tt: "[?debt_tmp]"
- debt_display_tt: "[?debt]" 
+ debt_display_tt: "[?debt]"
 
  HIDE_MONEY_TOOLTIP: "£click_left §YL Click§! to hide the money interface."
  SHOW_MONEY_TOOLTIP: "£click_left §YL Click§! to show the money interface."
@@ -151,7 +151,7 @@
  MAXIMUM_MIGRATION_RATE: "§LMaximum Migration Rate:§!"
  MAXIMUM_MIGRATION_RATE_VALUE: "[?ROOT.max_net_immigration_rate|%Y]"
  MAXIMUM_MIGRATION_RATE_TT: "Maximum Migration Rate"
- MAXIMUM_MIGRATION_RATE_TT_DELAYED: "The §YMaximum Migration Rate§! is the country's total potential §YMigration§! into the country. It is modified by your §YEconomic Cycle§!, §YProductivity§!, §YCurrent Ruling Party§!, §YWorker Fulfillment§!, §YUnemployment Rate§!, §YWar Support§! and whether you are at war. The value cannot be directly increased outside of the above metric and you can capture more of the §YMigration Rate§! by increasing your §YMigration Law§! or via national focuses, ideas or decisions. Furthermore, your §YNet Migration Rate§! is calculated as your §Ymaximum Migration Rate§! which is then multiplied by §YBase Net Migration Rate§! modified by your §YNet Migration Rate Value Factor§!.\n\n§YImpacts on Maximum Migration Rate:§!\n--------------\n§YMax from Productivity§!: [?immigration_productivity_calculations_display|%+]\n§OMax Worker Fulfillment/Unemployment Rate§!: [?immigration_employment_factor_display|%+]\n§GGovernment Ruling Party§!: [?immigration_government_factor_display|%+]\n§pRefugees from Neighbors at War§!: [?neighbour_war_refugees_display|%+]\n§0Our Countries Refugees From Being at War§!: [?personal_war_refugees_display|%+]\n§LEconomic Cycle/Ideas§!: [?modifier@maximum_migration_rate_value|%+]"
+ MAXIMUM_MIGRATION_RATE_TT_DELAYED: "The §YMaximum Migration Rate§! is the country's total potential §YMigration§! into the country. It is modified by your §YEconomic Cycle§!, §YProductivity§!, §YCurrent Ruling Party§!, §YWorker Fulfillment§!, §YUnemployment Rate§!, §YWar Support§! and whether you are at war. The value cannot be directly increased outside of the above metric and you can capture more of the §YMigration Rate§! by increasing your §YMigration Law§! or via national focuses, ideas or decisions. Furthermore, your §YNet Migration Rate§! is calculated as your §Ymaximum Migration Rate§! which is then multiplied by §YBase Net Migration Rate§! modified by your §YNet Migration Rate Value Factor§!.\n\n§YImpacts on Maximum Migration Rate:§!\n--------------\n§YMax from Productivity§!: [?immigration_productivity_calculations_display|%+]\n§OMax Worker Fulfillment/Unemployment Rate§!: [?immigration_employment_factor_display|%-]\n§GGovernment Ruling Party§!: [?immigration_government_factor_display|%+]\n§pRefugees from Neighbors at War§!: [?neighbour_war_refugees_display|%+]\n§0Our Countries Refugees From Being at War§!: [?personal_war_refugees_display|%+]\n§LEconomic Cycle/Ideas§!: [?modifier@maximum_migration_rate_value|%+]"
  NET_MIGRATION_RATE: "§pCurrent Net Migration Rate:§!"
  NET_MIGRATION_RATE_VALUE: "[?ROOT.net_immigration_rate|%+]"
  NET_MIGRATION_RATE_TT: "Current Net Migration Rate"
