@@ -52,6 +52,7 @@ v1.12.2
   - Fixed the missing localization for the Cuban focus "Talks with Colombia"
   - Improved the grammar and structure for some Serbian events
   - Fixed the localization for the Indian events about communist rebellions not properly referencing India
+  - Fixed the broken localization for Russian modifiers in the revived politburo focuses that were missing the right modifier definition
 
  Map:
 
